build/log/idf_py_stdout_output_5772
Command: ninja all
[1/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/src/ssd1309.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/src/ssd1309.c.obj 
C:\Espressif\tools\xtensa-esp-elf\esp-14.2.0_20251107\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"-128-NOTFOUND\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/rfink/Documents/ESP-IDF/AlarmClockv3/build/config -IC:/Users/rfink/Documents/ESP-IDF/AlarmClockv3/main -IC:/Users/rfink/Documents/ESP-IDF/AlarmClockv3/main/src -IC:/Users/rfink/Documents/ESP-IDF/AlarmClockv3/main/inc -IC:/esp/release-v5.5/esp-idf/components/newlib/platform_include -IC:/esp/release-v5.5/esp-idf/components/freertos/config/include -IC:/esp/release-v5.5/esp-idf/components/freertos/config/include/freertos -IC:/esp/release-v5.5/esp-idf/components/freertos/config/xtensa/include -IC:/esp/release-v5.5/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/esp/release-v5.5/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/esp/release-v5.5/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/esp/release-v5.5/esp-idf/components/freertos/esp_additions/include -IC:/esp/release-v5.5/esp-idf/components/esp_hw_support/include -IC:/esp/release-v5.5/esp-idf/components/esp_hw_support/include/soc -IC:/esp/release-v5.5/esp-idf/components/esp_hw_support/include/soc/esp32 -IC:/esp/release-v5.5/esp-idf/components/esp_hw_support/dma/include -IC:/esp/release-v5.5/esp-idf/components/esp_hw_support/ldo/include -IC:/esp/release-v5.5/esp-idf/components/esp_hw_support/debug_probe/include -IC:/esp/release-v5.5/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/esp/release-v5.5/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/esp/release-v5.5/esp-idf/components/esp_hw_support/power_supply/include -IC:/esp/release-v5.5/esp-idf/components/esp_hw_support/port/esp32/. -IC:/esp/release-v5.5/esp-idf/components/esp_hw_support/port/esp32/include -IC:/esp/release-v5.5/esp-idf/components/heap/include -IC:/esp/release-v5.5/esp-idf/components/heap/tlsf -IC:/esp/release-v5.5/esp-idf/components/log/include -IC:/esp/release-v5.5/esp-idf/components/soc/include -IC:/esp/release-v5.5/esp-idf/components/soc/esp32 -IC:/esp/release-v5.5/esp-idf/components/soc/esp32/include -IC:/esp/release-v5.5/esp-idf/components/soc/esp32/register -IC:/esp/release-v5.5/esp-idf/components/hal/platform_port/include -IC:/esp/release-v5.5/esp-idf/components/hal/esp32/include -IC:/esp/release-v5.5/esp-idf/components/hal/include -IC:/esp/release-v5.5/esp-idf/components/esp_rom/include -IC:/esp/release-v5.5/esp-idf/components/esp_rom/esp32/include -IC:/esp/release-v5.5/esp-idf/components/esp_rom/esp32/include/esp32 -IC:/esp/release-v5.5/esp-idf/components/esp_rom/esp32 -IC:/esp/release-v5.5/esp-idf/components/esp_common/include -IC:/esp/release-v5.5/esp-idf/components/esp_system/include -IC:/esp/release-v5.5/esp-idf/components/esp_system/port/soc -IC:/esp/release-v5.5/esp-idf/components/esp_system/port/include/private -IC:/esp/release-v5.5/esp-idf/components/xtensa/esp32/include -IC:/esp/release-v5.5/esp-idf/components/xtensa/include -IC:/esp/release-v5.5/esp-idf/components/xtensa/deprecated_include -IC:/esp/release-v5.5/esp-idf/components/lwip/include -IC:/esp/release-v5.5/esp-idf/components/lwip/include/apps -IC:/esp/release-v5.5/esp-idf/components/lwip/include/apps/sntp -IC:/esp/release-v5.5/esp-idf/components/lwip/lwip/src/include -IC:/esp/release-v5.5/esp-idf/components/lwip/port/include -IC:/esp/release-v5.5/esp-idf/components/lwip/port/freertos/include -IC:/esp/release-v5.5/esp-idf/components/lwip/port/esp32xx/include -IC:/esp/release-v5.5/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/esp/release-v5.5/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/esp/release-v5.5/esp-idf/components/driver/deprecated -IC:/esp/release-v5.5/esp-idf/components/driver/i2c/include -IC:/esp/release-v5.5/esp-idf/components/driver/touch_sensor/include -IC:/esp/release-v5.5/esp-idf/components/driver/twai/include -IC:/esp/release-v5.5/esp-idf/components/driver/touch_sensor/esp32/include -IC:/esp/release-v5.5/esp-idf/components/esp_pm/include -IC:/esp/release-v5.5/esp-idf/components/esp_ringbuf/include -IC:/esp/release-v5.5/esp-idf/components/esp_driver_gpio/include -IC:/esp/release-v5.5/esp-idf/components/esp_driver_pcnt/include -IC:/esp/release-v5.5/esp-idf/components/esp_driver_gptimer/include -IC:/esp/release-v5.5/esp-idf/components/esp_driver_spi/include -IC:/esp/release-v5.5/esp-idf/components/esp_driver_mcpwm/include -IC:/esp/release-v5.5/esp-idf/components/esp_driver_ana_cmpr/include -IC:/esp/release-v5.5/esp-idf/components/esp_driver_i2s/include -IC:/esp/release-v5.5/esp-idf/components/esp_driver_sdmmc/include -IC:/esp/release-v5.5/esp-idf/components/sdmmc/include -IC:/esp/release-v5.5/esp-idf/components/esp_driver_sdspi/include -IC:/esp/release-v5.5/esp-idf/components/esp_driver_sdio/include -IC:/esp/release-v5.5/esp-idf/components/esp_driver_dac/include -IC:/esp/release-v5.5/esp-idf/components/esp_driver_rmt/include -IC:/esp/release-v5.5/esp-idf/components/esp_driver_tsens/include -IC:/esp/release-v5.5/esp-idf/components/esp_driver_sdm/include -IC:/esp/release-v5.5/esp-idf/components/esp_driver_i2c/include -IC:/esp/release-v5.5/esp-idf/components/esp_driver_uart/include -IC:/esp/release-v5.5/esp-idf/components/vfs/include -IC:/esp/release-v5.5/esp-idf/components/esp_driver_ledc/include -IC:/esp/release-v5.5/esp-idf/components/esp_driver_parlio/include -IC:/esp/release-v5.5/esp-idf/components/esp_driver_usb_serial_jtag/include -IC:/esp/release-v5.5/esp-idf/components/esp_driver_twai/include -IC:/esp/release-v5.5/esp-idf/components/esp_netif/include -IC:/esp/release-v5.5/esp-idf/components/esp_event/include -IC:/esp/release-v5.5/esp-idf/components/esp_wifi/include -IC:/esp/release-v5.5/esp-idf/components/esp_wifi/include/local -IC:/esp/release-v5.5/esp-idf/components/esp_wifi/wifi_apps/include -IC:/esp/release-v5.5/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -IC:/esp/release-v5.5/esp-idf/components/esp_phy/include -IC:/esp/release-v5.5/esp-idf/components/esp_phy/esp32/include -IC:/esp/release-v5.5/esp-idf/components/esp_timer/include -IC:/esp/release-v5.5/esp-idf/components/nvs_flash/include -IC:/esp/release-v5.5/esp-idf/components/esp_partition/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/rfink/Documents/ESP-IDF/AlarmClockv3=. -fmacro-prefix-map=C:/esp/release-v5.5/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/src/ssd1309.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\src\ssd1309.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/src/ssd1309.c.obj -c C:/Users/rfink/Documents/ESP-IDF/AlarmClockv3/main/src/ssd1309.c
C:/Users/rfink/Documents/ESP-IDF/AlarmClockv3/main/src/ssd1309.c:188:6: error: conflicting types for 'format_AM_PM'; have 'void(int,  int *, char **)'
  188 | void format_AM_PM(int input_hour, int *display_hour, char **ampm){
      |      ^~~~~~~~~~~~
In file included from C:/Users/rfink/Documents/ESP-IDF/AlarmClockv3/main/src/ssd1309.c:1:
C:/Users/rfink/Documents/ESP-IDF/AlarmClockv3/main/inc/ssd1309.h:19:6: note: previous declaration of 'format_AM_PM' with type 'void(int,  int *, char *)'
   19 | void format_AM_PM(int input_hour, int *display_hour, char *ampm);
      |      ^~~~~~~~~~~~
[2/10] Performing build step for 'bootloader'
[1/1] C:\windows\system32\cmd.exe /C "cd /D C:\Users\rfink\Documents\ESP-IDF\AlarmClockv3\build\bootloader\esp-idf\esptool_py && C:\Espressif\tools\python\release-v5.5\venv\Scripts\python.exe C:/esp/release-v5.5/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Users/rfink/Documents/ESP-IDF/AlarmClockv3/build/bootloader/bootloader.bin"
Bootloader binary size 0x5c90 bytes. 0x1370 bytes (17%) free.
[3/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/src/main.c.obj
ninja: build stopped: subcommand failed.
